<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <groupId>com.trading-bot</groupId>
  <artifactId>com.trading-bot.happy-trader</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <description>Trading Bot Happy Trader 2.0</description>
  <name>happy-trader-2.0</name>
  <packaging>pom</packaging>

  <modules>
    <module>tradingbot-config</module>
    <module>tradingbot-app</module>
    <module>tradingbot-core</module>
    <module>bitmex-rest-api</module>
    <module>bitmex-historic-transactions</module>
  </modules>

  <properties>
    <apache.common.version>3.9</apache.common.version>
    <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
    <h2database.version>1.4.200</h2database.version>
    <hamcrest.lib.version>1.3</hamcrest.lib.version>
    <jackson.version>2.10.2</jackson.version>
    <java.version>1.8</java.version>
    <javax.servlet.api.version>3.1.0</javax.servlet.api.version>
    <junit.version>4.12</junit.version>
    <lombok.version>1.18.10</lombok.version>
    <springfox-swagger.version>2.9.2</springfox-swagger.version>
    <guava.version>29.0-jre</guava.version>
    <logback.version>1.2.3</logback.version>
    <slf4j.version>1.7.30</slf4j.version>
    <joda-time.version>2.10.6</joda-time.version>
    <httpclient.version>4.5.13</httpclient.version>
    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
    <apache.commons-io.version>2.8.0</apache.commons-io.version>
    <mockito-core.version>3.5.13</mockito-core.version>
    <commons-collections.version>4.4</commons-collections.version>
    <assertj-core.version>3.8.0</assertj-core.version>
    <json.simple.version>1.1.1</json.simple.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <jackson-databind.version>2.11.3</jackson-databind.version>
    <com.squareup.okhttp.version>2.7.5</com.squareup.okhttp.version>
    <com.google.code.gson.version>2.8.6</com.google.code.gson.version>
    <logging-interceptor.version>2.7.5</logging-interceptor.version>
    <gson-fire.version>1.8.4</gson-fire.version>
    <spring.boot.version>2.3.4.RELEASE</spring.boot.version>
    <snakeyaml.version>1.27</snakeyaml.version>
    <jetty.websoket.client.version>9.4.33.v20201020</jetty.websoket.client.version>
    <postgresql.version>42.2.18</postgresql.version>
    <hikary.version>3.4.5</hikary.version>

  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring.boot.version}</version>
        <scope>test</scope>
      </dependency>


      <dependency>
        <artifactId>javax.servlet-api</artifactId>
        <groupId>javax.servlet</groupId>
        <scope>provided</scope>
        <version>${javax.servlet.api.version}</version>
      </dependency>

      <dependency>
        <groupId>org.eclipse.jetty.websocket</groupId>
        <artifactId>websocket-client</artifactId>
        <version>${jetty.websoket.client.version}</version>
      </dependency>

      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>${snakeyaml.version}</version>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson-databind.version}</version>
      </dependency>

      <dependency>
        <artifactId>commons-lang3</artifactId>
        <groupId>org.apache.commons</groupId>
        <version>${apache.common.version}</version>
      </dependency>

      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${apache.commons-io.version}</version>
      </dependency>

      <dependency>
        <groupId>com.squareup.okhttp</groupId>
        <artifactId>logging-interceptor</artifactId>
        <version>${logging-interceptor.version}</version>
      </dependency>

      <dependency>
        <groupId>io.gsonfire</groupId>
        <artifactId>gson-fire</artifactId>
        <version>${gson-fire.version}</version>
      </dependency>


      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections.version}</version>
      </dependency>

      <dependency>
        <artifactId>h2</artifactId>
        <groupId>com.h2database</groupId>
        <scope>runtime</scope>
        <version>${h2database.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>

      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>

      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>${joda-time.version}</version>
      </dependency>

      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>${hikary.version}</version>
      </dependency>


      <dependency>
        <groupId>org.apache.httpcomponents</groupId>
        <artifactId>httpclient</artifactId>
        <version>${httpclient.version}</version>
      </dependency>

      <dependency>
        <groupId>javax.annotation</groupId>
        <artifactId>javax.annotation-api</artifactId>
        <version>${javax.annotation-api.version}</version>
      </dependency>

      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <scope>provided</scope>
        <version>${lombok.version}</version>
      </dependency>

      <dependency>
        <artifactId>junit</artifactId>
        <groupId>junit</groupId>
        <scope>test</scope>
        <version>${junit.version}</version>
      </dependency>

      <dependency>
        <artifactId>hamcrest-all</artifactId>
        <groupId>org.hamcrest</groupId>
        <scope>test</scope>
        <version>${hamcrest.lib.version}</version>
      </dependency>

      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj-core.version}</version>
        <scope>test</scope>
      </dependency>


      <dependency>
        <artifactId>jackson-core</artifactId>
        <groupId>com.fasterxml.jackson.core</groupId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <artifactId>jackson-databind</artifactId>
        <groupId>com.fasterxml.jackson.core</groupId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <artifactId>jackson-annotations</artifactId>
        <groupId>com.fasterxml.jackson.core</groupId>
        <version>${jackson.version}</version>
      </dependency>

      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger2</artifactId>
        <version>${springfox-swagger.version}</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger-ui</artifactId>
        <version>${springfox-swagger.version}</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>com.squareup.okhttp</groupId>
        <artifactId>okhttp</artifactId>
        <version>${com.squareup.okhttp.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${com.google.code.gson.version}</version>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <version>${logback.version}</version>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>${logback.version}</version>
      </dependency>

      <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>${json.simple.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito-core.version}</version>
        <scope>test</scope>
      </dependency>


    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
          <includes>
            <include>**/*Test.java</include>
          </includes>
        </configuration>
      </plugin>


<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-failsafe-plugin</artifactId>-->
<!--        <version>2.22.0</version>-->
<!--        <configuration>-->
<!--          <argLine>-->
<!--            &#45;&#45;illegal-access=permit-->
<!--          </argLine>-->
<!--        </configuration>-->
<!--      </plugin>-->


      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <failsOnError>true</failsOnError>
        </configuration>
        <executions>
          <execution>
            <configuration>
              <configLocation>checkstyle.xml</configLocation>
              <consoleOutput>true</consoleOutput>
              <encoding>UTF-8</encoding>
              <failsOnError>true</failsOnError>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <id>Checking code style</id>
            <phase>validate</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${checkstyle-maven-plugin.version}</version>
      </plugin>

    </plugins>
  </build>

</project>
